--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "release": "cd android && ./gradlew assembleRelease"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.3",
     "axios": "^0.19.0",
     "mobx": "^5.15.0",
     "mobx-react": "^6.1.4",
