--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-datepicker": "^1.7.2",
+    "react-native-push-notification": "^3.1.9",
     "react-native-storage": "^1.0.1",
     "react-navigation": "^4.0.10"
   },
