--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.60.5",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-i18n": "^2.0.15",
     "react-native-orientation-locker": "^1.1.7",
     "react-native-push-notification": "^3.1.9",
     "react-native-storage": "^1.0.1",
