--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-datepicker": "^1.7.2",
+    "react-native-fbsdk": "^1.1.1",
+    "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-i18n": "^2.0.15",
     "react-native-orientation-locker": "^1.1.7",
