--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "react-native-i18n": "^2.0.15",
     "react-native-orientation-locker": "^1.1.7",
     "react-native-push-notification": "^3.1.9",
+    "react-native-reanimated": "^1.4.0",
     "react-native-storage": "^1.0.1",
     "react-native-swipe-gestures": "^1.0.4",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.0.10"
+    "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.3.3",
+    "react-navigation-stack": "^1.10.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
