--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/plugin-proposal-decorators": "^7.7.4",
     "@babel/runtime": "^7.5.0",
     "@react-native-community/eslint-config": "^0.0.3",
+    "@react-native-community/push-notification-ios": "^1.0.3",
     "@types/jest": "^24.0.18",
     "@types/react": "^16.9.2",
     "@types/react-native": "^0.60.14",
